Updated logo and setup navigation component on all pages

--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-left: 95px;
 }
 .nav-container__navigation {
   margin-right: 100px;
@@ -17,4 +18,4 @@
 }
 .nav-container__navigation ul li:hover {
   cursor: pointer;
-}/*# sourceMappingURL=HomeNav.module.css.map */
+}/*# sourceMappingURL=Navigation.module.css.map */
