--- a/css/logo.module.css
+++ b/css/logo.module.css
@@ -1,10 +1,7 @@
-.logo {
-  color: #fff;
-  -webkit-text-stroke: 2px #ff0404; /* width and color */
-  text-align: center;
-  font-family: Roboto;
-  font-size: 2.65rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+.logo--small {
+  width: 250px;
+}
+
+.logo--big {
+  width: 500px;
 }/*# sourceMappingURL=logo.module.css.map */
