--- a/css/home.module.css
+++ b/css/home.module.css
@@ -13,6 +13,7 @@
 .home__main-container__text-box {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 900px;
   gap: 30px;
 }
