--- a/src/styles/globals/layout.module.scss
+++ b/src/styles/globals/layout.module.scss
@@ -3,13 +3,22 @@
   box-sizing: border-box;
   background: rgb(64, 36, 134);
   background: linear-gradient(
-    174deg,
-    rgba(64, 36, 134, 1) 40%,
-    rgba(64, 36, 134, 0.9220063025210083) 58%,
-    rgba(64, 36, 134, 0.8379726890756303) 73%,
-    rgba(64, 36, 134, 0.7259278711484594) 87%,
-    rgba(64, 36, 134, 0.6250875350140056) 100%
+    167deg,
+    rgba(56, 19, 150, 0.81) 0%,
+    rgba(82, 18, 147, 0.89) 21.97%,
+    rgba(112, 24, 166, 0.94) 41.48%,
+    rgba(106, 33, 178, 0.94) 59.51%,
+    rgba(85, 52, 168, 0.89) 97.32%
   );
+
+  // linear-gradient(
+  //   174deg,
+  //   rgba(64, 36, 134, 1) 40%,
+  //   rgba(64, 36, 134, 0.9220063025210083) 58%,
+  //   rgba(64, 36, 134, 0.8379726890756303) 73%,
+  //   rgba(64, 36, 134, 0.7259278711484594) 87%,
+  //   rgba(64, 36, 134, 0.6250875350140056) 100%
+  // );
   width: 100%;
   height: auto;
   min-height: 100vh;
