--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -13,6 +13,7 @@
     &__text-box {
       display: flex;
       flex-direction: column;
+      align-items: center;
       width: 900px;
       gap: 30px;
       &__text {
