--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -50,7 +50,7 @@
       display: flex;
       flex-direction: row;
       width: 50%;
-      align-items: start;
+      align-items: flex-start;
       &-img {
         width: 50%;
       }
