--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -132,4 +132,8 @@
   &-border-bottom {
     border-bottom: 2px dashed white;
   }
+  &-corners-left:nth-of-type(3)::after {
+    content: "";
+    border: none;
+  }
 }
