--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -42,7 +42,7 @@
       width: 50%;
       span {
         width: 50%;
-        height: calc(100% - 2px);
+        height: calc(100%);
         margin-right: 4px;
       }
     }
@@ -88,16 +88,16 @@
     background-size: 2px 30px;
     background-repeat: repeat-y;
   }
-  // &-border-top {
-  //   background-image: linear-gradient(
-  //     to right,
-  //     white 60%,
-  //     rgba(255, 255, 255, 0) 0%
-  //   );
-  //   background-position: top;
-  //   background-size: 37px 2px;
-  //   background-repeat: repeat-x;
-  // }
+  &-border-top {
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: top;
+    background-size: 39px 2px;
+    background-repeat: repeat-x;
+  }
   &-border-bottom {
     background-image: linear-gradient(
       to right,
@@ -105,7 +105,7 @@
       rgba(255, 255, 255, 0) 0%
     );
     background-position: bottom;
-    background-size: 37px 2px;
+    background-size: 39px 2px;
     background-repeat: repeat-x;
   }
   &-corners-right {
@@ -116,20 +116,34 @@
     display: block;
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: -4px;
     height: 20px;
-    width: 20px;
-    border-right: 2px dashed white;
+    width: 4px;
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: bottom;
+    background-size: 4px 1px;
+    background-repeat: repeat-y;
   }
   &-corners-right::after {
     content: "";
     display: block;
     position: absolute;
     bottom: 0px;
-    right: 0px;
+    right: -4px;
     height: 20px;
-    width: 20px;
-    border-right: 2px dashed white;
+    width: 4px;
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: bottom;
+    background-size: 4px 1px;
+    background-repeat: repeat-y;
   }
   &-corners-left {
     margin-left: 0px;
@@ -139,19 +153,53 @@
     display: block;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: -4px;
     height: 20px;
-    width: 20px;
-    border-left: 2px dashed white;
+    width: 4px;
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: bottom;
+    background-size: 4px 1px;
+    background-repeat: repeat-y;
   }
   &-corners-left::after {
     content: "";
     display: block;
     position: absolute;
     bottom: 0px;
-    left: 0px;
+    left: -4px;
     height: 20px;
-    width: 20px;
-    border-left: 2px dashed white;
+    width: 4px;
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: bottom;
+    background-size: 4px 1px;
+    background-repeat: repeat-y;
+  }
+  &-corner-left-top {
+    margin-left: 0px;
+  }
+  &-corner-left-top::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: -4px;
+    height: 20px;
+    width: 4px;
+    background-image: linear-gradient(
+      to right,
+      white 60%,
+      rgba(255, 255, 255, 0) 0%
+    );
+    background-position: bottom;
+    background-size: 4px 1px;
+    background-repeat: repeat-y;
   }
 }
