--- a/css/continents.module.css
+++ b/css/continents.module.css
@@ -6,12 +6,30 @@
   font-family: Roboto;
   color: white;
 }
-.continents__main-container {
+.continents__map-container {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   padding: 0vh 0;
   margin: 0vh auto 5vh auto;
   width: 100%;
-  height: 80vh;
+  height: auto;
+}
+.continents__continent {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+.continents__continent__image-box {
+  display: flex;
+  flex-direction: column;
+}
+.continents__continent__image-box__title {
+  font-size: 26px;
+  text-align: center;
+}
+.continents__continent__image-box__image {
+  width: 480px;
 }/*# sourceMappingURL=continents.module.css.map */
