Added stamp animation

--- a/src/components/continents/continents.module.scss
+++ b/src/components/continents/continents.module.scss
@@ -13,6 +13,7 @@
     margin: 0vh auto 5vh auto;
     width: 100%;
     height: auto;
+    cursor: pointer;
   }
   &__continent {
     display: flex;
