--- a/src/components/continents/continents.module.scss
+++ b/src/components/continents/continents.module.scss
@@ -16,14 +16,18 @@
     cursor: pointer;
   }
   &__continent {
+    box-sizing: border-box;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: 100vh;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 10%;
     &__image-box {
       display: flex;
       flex-direction: column;
+      width: 30%;
       &__title {
         font-size: 26px;
         text-align: center;
@@ -31,6 +35,21 @@
       &__image {
         width: 480px;
       }
+    }
+    &__countries-box {
+      display: flex;
+      align-items: center;
+      justify-content: left;
+      flex-wrap: wrap;
+      border-radius: 1.5625rem;
+      border: 4px solid #5acbe5;
+      background: rgba(71, 170, 192, 0);
+      box-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.5);
+      width: 60%;
+      height: auto;
+      min-height: 100px;
+      padding: 15px;
+      gap: 10px;
     }
   }
 }
