--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -12,7 +12,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 300px;
+    gap: 20vw;
 
     &__text-box {
       display: flex;
