--- a/css/continents.module.css
+++ b/css/continents.module.css
@@ -40,29 +40,16 @@
 }
 .continents__continent__countries-box {
   display: flex;
+  align-items: center;
+  justify-content: left;
   flex-wrap: wrap;
   border-radius: 1.5625rem;
   border: 4px solid #5acbe5;
   background: rgba(71, 170, 192, 0);
   box-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.5);
   width: 60%;
-  height: 300px;
+  height: auto;
+  min-height: 100px;
   padding: 15px;
-}
-.continents__continent__countries-box__label {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: rgba(68, 182, 198, 0.7);
-  width: 200px;
-  height: 30px;
   gap: 10px;
-  padding: 10px;
-  border-radius: 15px;
-  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.5);
-  font-size: 20px;
-}
-.continents__continent__countries-box__label img {
-  width: 35px;
-  height: 35px;
 }/*# sourceMappingURL=continents.module.css.map */
