--- a/css/home.module.css
+++ b/css/home.module.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 300px;
+  gap: 20vw;
 }
 .home__main-container__text-box {
   display: flex;
