--- a/src/components/continents/continents.module.scss
+++ b/src/components/continents/continents.module.scss
@@ -10,10 +10,13 @@
     display: flex;
     justify-content: center;
     padding: 0vh 0;
-    margin: 0vh auto 5vh auto;
+    margin: 0vh auto 0vh auto;
     width: 100%;
     height: auto;
     cursor: pointer;
+    svg {
+      height: 81vh;
+    }
   }
   &__continent {
     box-sizing: border-box;
