--- a/src/components/continents/continents.module.scss
+++ b/src/components/continents/continents.module.scss
@@ -48,7 +48,8 @@
       border: 4px solid #5acbe5;
       background: rgba(71, 170, 192, 0);
       box-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.5);
-      width: 60%;
+      width: max-content;
+      max-width: 54%;
       height: auto;
       min-height: 100px;
       padding: 15px;
