--- a/css/button.module.css
+++ b/css/button.module.css
@@ -1,4 +1,4 @@
-button {
+.button-global {
   font-family: Roboto;
   display: flex;
   align-items: center;
@@ -15,7 +15,7 @@ button {
   transition: 0.4s;
 }
 
-button:hover {
+.button-global:hover {
   background-size: 100% 100%;
   cursor: pointer;
 }/*# sourceMappingURL=button.module.css.map */
