--- a/src/components/globals/button.module.scss
+++ b/src/components/globals/button.module.scss
@@ -1,4 +1,4 @@
-button {
+.button-global {
   font-family: Roboto;
   display: flex;
   align-items: center;
@@ -17,7 +17,7 @@ button {
   background-repeat: no-repeat;
   transition: 0.4s;
 }
-button:hover {
+.button-global:hover {
   background-size: 100% 100%;
   cursor: pointer;
 }
