--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -113,8 +113,18 @@
   }
 }
 @media only screen and (max-width: 550px) {
+  .nav-container {
+    justify-content: center;
+  }
+  .nav-container__navigation__button {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 0;
+  }
   .nav-container__dropdown-menu--shown {
     animation: dropdown-mobile 0.3s ease-in-out;
     width: 100vw;
+    z-index: 1;
   }
 }/*# sourceMappingURL=Navigation.module.css.map */
