--- a/css/footer.module.css
+++ b/css/footer.module.css
@@ -7,12 +7,31 @@
   background: rgba(56, 19, 150, 0.65);
   box-sizing: border-box;
   padding: 10px 60px;
+  gap: 5vw;
 }
 .footer__contact {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   gap: 1rem;
 }
 .footer__contact-icon {
   width: 40px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .footer__contact-icon {
+    width: 30px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1vh;
+    font-size: 0.6rem;
+    padding: 10px 20px;
+  }
+  .footer__contact-icon {
+    width: 30px;
+  }
 }/*# sourceMappingURL=footer.module.css.map */
