--- a/css/home.module.css
+++ b/css/home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: auto;
-  padding: 0vh 10vw 0 5vw;
+  padding: 0vh 10vw 5vh 5vw;
   font-family: Roboto;
   color: white;
 }
@@ -14,16 +14,15 @@
   justify-content: space-between;
   align-items: center;
   gap: 20vw;
+  font-size: 2rem;
 }
 .home__main-container__text-box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 900px;
   gap: 30px;
 }
 .home__main-container__text-box__text {
-  font-size: 36px;
   font-weight: 600;
   margin-left: 10px;
 }
@@ -33,7 +32,7 @@
 .home__section {
   display: flex;
   width: 100%;
-  padding: 0px 0;
+  padding: 0 0;
   flex-direction: row;
 }
 .home__section__no-content {
@@ -95,7 +94,7 @@
   background-repeat: repeat-x;
 }
 .home-corners-right {
-  margin-right: 20px;
+  margin-right: 0px;
 }
 .home-corners-right::before {
   content: "";
@@ -167,4 +166,57 @@
   background-position: bottom;
   background-size: 4px 1px;
   background-repeat: repeat-y;
+}
+
+@media only screen and (max-width: 1280px) {
+  .home__main-container {
+    flex-direction: column;
+    height: auto;
+    margin: 10vh 0;
+    font-size: 1.5rem;
+    text-align: center;
+    gap: 5vh;
+  }
+  .home__section {
+    flex-direction: column;
+  }
+  .home__section__no-content {
+    display: none;
+  }
+  .home__section__content {
+    width: 100%;
+    gap: 10vw;
+    align-items: center;
+  }
+  .home__section__content-img {
+    width: 40%;
+  }
+  .home-border-left, .home-border-right, .home-border-top, .home-border-bottom {
+    background-image: none;
+  }
+  .home-corners-right::before, .home-corners-right::after, .home-corners-left::before, .home-corners-left::after, .home-corner-left-top::before {
+    display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .home__main-container__worldBookImg {
+    width: 300px;
+  }
+  .home__section img {
+    width: 70%;
+  }
+  .home__section__content:nth-child(even) {
+    flex-direction: column;
+  }
+  .home__section__content:nth-child(odd) {
+    flex-direction: column-reverse;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .home__main-container__text-box img {
+    width: 300px;
+  }
+  .home__main-container__worldBookImg {
+    width: 200px;
+  }
 }/*# sourceMappingURL=home.module.css.map */
