--- a/css/logo.module.css
+++ b/css/logo.module.css
@@ -4,4 +4,10 @@
 
 .logo--big {
   width: 500px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .logo--small {
+    width: 200px;
+  }
 }/*# sourceMappingURL=logo.module.css.map */
