--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: auto;
-  padding: 0vh 10vw 0 5vw;
+  padding: 0vh 10vw 5vh 5vw;
   font-family: Roboto;
   color: white;
   &__main-container {
@@ -13,15 +13,13 @@
     justify-content: space-between;
     align-items: center;
     gap: 20vw;
-
+    font-size: 2rem;
     &__text-box {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 900px;
       gap: 30px;
       &__text {
-        font-size: 36px;
         font-weight: 600;
         margin-left: 10px;
       }
@@ -33,8 +31,7 @@
   &__section {
     display: flex;
     width: 100%;
-    padding: 00px 0;
-
+    padding: 0 0;
     flex-direction: row;
     &__no-content {
       display: flex;
@@ -109,7 +106,7 @@
     background-repeat: repeat-x;
   }
   &-corners-right {
-    margin-right: 20px;
+    margin-right: 0px;
   }
   &-corners-right::before {
     content: "";
@@ -201,5 +198,78 @@
     background-position: bottom;
     background-size: 4px 1px;
     background-repeat: repeat-y;
+  }
+}
+@media only screen and (max-width: 1280px) {
+  .home {
+    &__main-container {
+      flex-direction: column;
+      height: auto;
+      margin: 10vh 0;
+      font-size: 1.5rem;
+      text-align: center;
+      gap: 5vh;
+    }
+    &__section {
+      flex-direction: column;
+      &__no-content {
+        display: none;
+      }
+      &__content {
+        width: 100%;
+        gap: 10vw;
+        align-items: center;
+        &-img {
+          width: 40%;
+        }
+      }
+    }
+    &-border-left,
+    &-border-right,
+    &-border-top,
+    &-border-bottom {
+      background-image: none;
+    }
+    &-corners-right::before,
+    &-corners-right::after,
+    &-corners-left::before,
+    &-corners-left::after,
+    &-corner-left-top::before {
+      display: none;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .home {
+    &__main-container {
+      &__worldBookImg {
+        width: 300px;
+      }
+    }
+    &__section {
+      img {
+        width: 70%;
+      }
+      &__content:nth-child(even) {
+        flex-direction: column;
+      }
+      &__content:nth-child(odd) {
+        flex-direction: column-reverse;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 640px) {
+  .home {
+    &__main-container {
+      &__text-box {
+        img {
+          width: 300px;
+        }
+      }
+      &__worldBookImg {
+        width: 200px;
+      }
+    }
   }
 }
