--- a/css/Navigation.module.css
+++ b/css/Navigation.module.css
@@ -112,19 +112,22 @@
     cursor: pointer;
   }
 }
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 650px) {
   .nav-container {
     justify-content: center;
   }
   .nav-container__navigation__button {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 30px;
+    right: 30px;
     z-index: 0;
   }
   .nav-container__dropdown-menu--shown {
     animation: dropdown-mobile 0.3s ease-in-out;
     width: 100vw;
     z-index: 1;
+  }
+  .nav-container__dropdown-menu--shown__pages {
+    background: #239bd0;
   }
 }/*# sourceMappingURL=Navigation.module.css.map */
