--- a/src/components/nav/Navigation.module.scss
+++ b/src/components/nav/Navigation.module.scss
@@ -130,14 +130,14 @@
     }
   }
 }
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 650px) {
   .nav-container {
     justify-content: center;
     &__navigation {
       &__button {
         position: absolute;
-        top: 15px;
-        right: 15px;
+        top: 30px;
+        right: 30px;
         z-index: 0;
       }
     }
@@ -145,6 +145,9 @@
       animation: dropdown-mobile 0.3s ease-in-out;
       width: 100vw;
       z-index: 1;
+      &__pages {
+        background: #239bd0;
+      }
     }
   }
 }
