--- a/css/continents.module.css
+++ b/css/continents.module.css
@@ -28,6 +28,7 @@
   justify-content: space-between;
   width: 100%;
   gap: 10%;
+  padding: 0 2vw;
 }
 .continents__continent__image-box {
   display: flex;
@@ -41,20 +42,79 @@
 .continents__continent__image-box__image {
   width: 480px;
 }
-.continents__continent__countries-box {
+.continents__continent__countries-container {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: left;
-  flex-wrap: wrap;
   border-radius: 1.5625rem;
   border: 4px solid #5acbe5;
   background: rgba(71, 170, 192, 0);
   box-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.5);
-  width: -moz-max-content;
-  width: max-content;
-  max-width: 54%;
+  width: 54%;
   height: auto;
   min-height: 100px;
+}
+.continents__continent__countries-container__countries-box {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  flex-wrap: wrap;
   padding: 15px;
   gap: 10px;
+  max-width: 910px;
+}
+
+@media only screen and (max-width: 1830px) {
+  .continents__continent__countries-container__countries-box {
+    max-width: 680px;
+  }
+}
+@media only screen and (max-width: 1390px) {
+  .continents__map-container {
+    height: 100vh;
+  }
+  .continents__continent {
+    height: auto;
+    margin-bottom: 10vh;
+  }
+  .continents__continent__countries-container__countries-box {
+    max-width: 450px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .continents__map-container {
+    justify-content: flex-start;
+    height: 90vh;
+  }
+  .continents__map-container svg {
+    width: 100%;
+  }
+  .continents__continent {
+    flex-direction: column;
+    height: auto;
+    gap: 5vh;
+    margin-bottom: 10vh;
+    padding-top: 5vh;
+  }
+  .continents__continent__image-box {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap: 5vh;
+  }
+  .continents__continent__image-box__image {
+    width: 100%;
+  }
+  .continents__continent__countries-container {
+    width: 83%;
+    height: auto;
+  }
+  .continents__continent__countries-container__countries-box {
+    justify-content: left;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .continents__continent__countries-container__countries-box {
+    justify-content: center;
+  }
 }/*# sourceMappingURL=continents.module.css.map */
