--- a/src/components/continents/continents.module.scss
+++ b/src/components/continents/continents.module.scss
@@ -27,6 +27,7 @@
     justify-content: space-between;
     width: 100%;
     gap: 10%;
+    padding: 0 2vw;
     &__image-box {
       display: flex;
       flex-direction: column;
@@ -39,21 +40,85 @@
         width: 480px;
       }
     }
-    &__countries-box {
+    &__countries-container {
       display: flex;
+      justify-content: center;
       align-items: center;
-      justify-content: left;
-      flex-wrap: wrap;
       border-radius: 1.5625rem;
       border: 4px solid #5acbe5;
       background: rgba(71, 170, 192, 0);
       box-shadow: 4px 6px 4px 0px rgba(0, 0, 0, 0.5);
-      width: max-content;
-      max-width: 54%;
+      width: 54%;
       height: auto;
       min-height: 100px;
-      padding: 15px;
-      gap: 10px;
+      &__countries-box {
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        flex-wrap: wrap;
+        padding: 15px;
+        gap: 10px;
+        max-width: 910px;
+      }
     }
+  }
+}
+@media only screen and (max-width: 1830px) {
+  .continents__continent__countries-container__countries-box {
+    max-width: 680px;
+  }
+}
+@media only screen and (max-width: 1390px) {
+  .continents__map-container {
+    height: 100vh;
+  }
+  .continents__continent {
+    height: auto;
+    margin-bottom: 10vh;
+  }
+  .continents__continent__countries-container__countries-box {
+    max-width: 450px;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .continents {
+    &__map-container {
+      justify-content: flex-start;
+      height: 90vh;
+      svg {
+        width: 100%;
+        // height: 81vh;
+        // zoom: 0.4;
+        // -moz-transform: scale(0.4);
+      }
+    }
+    &__continent {
+      flex-direction: column;
+      height: auto;
+      gap: 5vh;
+      margin-bottom: 10vh;
+      padding-top: 5vh;
+      &__image-box {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        gap: 5vh;
+        &__image {
+          width: 100%;
+        }
+      }
+      &__countries-container {
+        width: 83%;
+        height: auto;
+        &__countries-box {
+          justify-content: left;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 620px) {
+  .continents__continent__countries-container__countries-box {
+    justify-content: center;
   }
 }
