--- a/src/components/ui/stamp.module.scss
+++ b/src/components/ui/stamp.module.scss
@@ -90,3 +90,12 @@
     }
   }
 }
+@media only screen and (max-width: 1100px) {
+  .img-container {
+    &__stamp {
+      display: none;
+      // zoom: 0.4;
+      // -moz-transform: scale(0.4);
+    }
+  }
+}
