Updated countryPage dynamic route; added lazy loading - data loader from db at country page.

--- a/src/components/country/country.module.scss
+++ b/src/components/country/country.module.scss
@@ -8,6 +8,7 @@
     flex-direction: row;
     gap: 20%;
     min-height: 83vh;
+    justify-content: center;
     &__flag-box {
       display: flex;
       align-items: center;
@@ -22,6 +23,7 @@
       display: flex;
       gap: 3vh;
       flex-direction: column;
+      justify-content: center;
       &__country-name {
         font-size: 3rem;
         font-weight: 600;
