Added flags and emblems to assets folder

--- a/src/components/ui/countryDetailsBorder15.module.scss
+++ b/src/components/ui/countryDetailsBorder15.module.scss
@@ -5,10 +5,11 @@
   border: 3px solid #44b6c6;
   color: white;
   border-radius: 15px;
-  padding: 1.5rem 4.5rem;
+  padding: 1.5rem 0.5rem;
   font-size: 1.5rem;
   align-items: center;
   justify-content: center;
+  text-align: center;
   &__corner-tr {
     box-sizing: border-box;
     top: 0;
