--- a/css/countryDetailsBorder15.module.css
+++ b/css/countryDetailsBorder15.module.css
@@ -5,10 +5,11 @@
   border: 3px solid #44b6c6;
   color: white;
   border-radius: 15px;
-  padding: 1.5rem 4.5rem;
+  padding: 1.5rem 0.5rem;
   font-size: 1.5rem;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 .box__corner-tr {
   box-sizing: border-box;
@@ -35,4 +36,18 @@
 
 .large {
   width: 100%;
+}
+
+@media only screen and (max-width: 680px) {
+  .box {
+    font-size: 1.2rem;
+  }
+  .small {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .box {
+    font-size: 1rem;
+  }
 }/*# sourceMappingURL=countryDetailsBorder15.module.css.map */
