--- a/src/components/country/country.module.scss
+++ b/src/components/country/country.module.scss
@@ -9,6 +9,9 @@
     gap: 20%;
     min-height: 83vh;
     justify-content: center;
+    &__country-name-mobile {
+      display: none;
+    }
     &__flag-box {
       display: flex;
       align-items: center;
@@ -35,5 +38,50 @@
         justify-content: space-between;
       }
     }
+  }
+}
+@media only screen and (max-width: 1630px) {
+  .country-container__details-container {
+    gap: 10%;
+  }
+  .country-container__details-container__main-info-box {
+    width: 45%;
+  }
+}
+@media only screen and (max-width: 1390px) {
+  .country-container {
+    &__details-container {
+      flex-direction: column;
+      align-items: center;
+      gap: 5vh;
+      &__main-info-box {
+        width: 80%;
+        &__country-name {
+          display: none;
+        }
+        &__row-1-box {
+          flex-direction: row;
+          gap: 2rem;
+          justify-content: center;
+        }
+      }
+      &__country-name-mobile {
+        display: flex;
+        font-size: 3rem;
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .country-container__details-container__flag-box {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 680px) {
+  .country-container__details-container__main-info-box__row-1-box {
+    flex-direction: column;
+    align-items: center;
   }
 }
