--- a/src/components/ui/countryDetailsBorder15.module.scss
+++ b/src/components/ui/countryDetailsBorder15.module.scss
@@ -35,3 +35,16 @@
 .large {
   width: 100%;
 }
+@media only screen and (max-width: 680px) {
+  .box {
+    font-size: 1.2rem;
+  }
+  .small {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .box {
+    font-size: 1rem;
+  }
+}
