Created demo modal with icons informations - need to be updated

--- a/css/countryDetailsBorder50.module.css
+++ b/css/countryDetailsBorder50.module.css
@@ -12,4 +12,8 @@
 .box__img {
   width: 90px;
   height: 90px;
+}
+
+.purple-border {
+  border: 3px solid rgba(131, 39, 188, 0.55);
 }/*# sourceMappingURL=countryDetailsBorder50.module.css.map */
