--- a/css/button.module.css
+++ b/css/button.module.css
@@ -13,6 +13,8 @@
   background-size: 0 100%;
   background-repeat: no-repeat;
   transition: 0.4s;
+  text-align: center;
+  justify-content: center;
 }
 
 .button-global:hover {
