--- a/src/components/globals/button.module.scss
+++ b/src/components/globals/button.module.scss
@@ -16,6 +16,8 @@
   background-size: 0 100%;
   background-repeat: no-repeat;
   transition: 0.4s;
+  text-align: center;
+  justify-content: center;
 }
 .button-global:hover {
   background-size: 100% 100%;
