--- a/src/components/authentication/authentication.module.scss
+++ b/src/components/authentication/authentication.module.scss
@@ -37,6 +37,9 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      &__warning {
+        color: #ff2f2f;
+      }
       input {
         box-sizing: border-box;
         outline: none;
